added the backend for comments
